[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/PLACEHOLDERPLAYER.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Characters/Hurtbox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 2 )

[sub_resource type="Animation" id=4]
resource_name = "Moving"
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Slash"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 8 )

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Moving = SubResource( 4 )
anims/Slash = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="StartAttractTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StunnedTimer" type="Timer" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 7 )

[node name="BuffTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="StartAttractTimer" to="." method="_on_StartAttractTimer_timeout"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
